--- a/shell/cept-win.yaml
+++ b/shell/cept-win.yaml
@@ -60,6 +60,9 @@ dependencies:
     - lightning
     - open3d
     - spconv-cu113
+    - ftfy
+    - regex
+    - tqdm
     - git+https://github.com/openai/CLIP.git
     - torch_geometric
     - --find-links https://data.pyg.org/whl/torch-2.0.0+cu118.html
