✨ feat: add WSL configuration and update Dockerfile for package installation

--- a/shell/Dockerfile
+++ b/shell/Dockerfile
@@ -62,7 +62,7 @@ RUN mamba install pdal python-pdal=3.2.3 -y
 # ========================================================================================
 RUN pip install --upgrade pip 
 RUN pip install timm numpy==1.26.4
-RUN pip install torch_geometric torch_scatter torch_sparse torch_cluster  -f https://data.pyg.org/whl/torch-${TORCH_VERSION}+cu${CUDA_VERSION_NO_DOT}.html 
+RUN pip install torch_geometric torch_scatter torch_sparse torch_cluster  --index-url https://data.pyg.org/whl/torch-${TORCH_VERSION}+cu${CUDA_VERSION_NO_DOT}.html 
 RUN pip install spconv-cu124
 RUN pip install ftfy regex tqdm omegaconf
 RUN pip install argparse scikit-learn scipy
